[package]
name = "gronr"
version = "0.1.0"
edition = "2021"
description = "Make json greppable. A simple clone of gron."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
